refactor: 核心模块重构 — 订阅链路·紫卡工具链·虚拟线程优化·SSE修复 (#173)
Co-authored-by: KingPrimes <Sakitama_q@163.com>